--- a/seminar7/package.json
+++ b/seminar7/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/MihaiAdrianLungu/tw-1099#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
